--- a/무신사_크롤링/Lets.ipynb
+++ b/무신사_크롤링/Lets.ipynb
@@ -22,17 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "driver = webdriver.Chrome()\n",
-    "driver.get('https://www.musinsa.com/categories/item/001005')"
+    "driver.get('https://www.musinsa.com/categories/item/001005?d_cat_cd=001005&brand=&list_kind=small&sort=pop_category&sub_sort=&page=2&display_cnt=90&exclusive_yn='\\\n",
+    "           + '&sale_goods=&timesale_yn=&ex_soldout=&plusDeliveryYn=&kids=&color=&price1=&price2=&shoeSizeOption=&tags=&campaign_id=&includeKeywords=&measure=')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +77,7 @@
        "90"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +121,7 @@
        "90"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,6 +129,75 @@
    "source": [
     "len(pro_brnad_list)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'66,000                25,900'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 상품 가격\n",
+    "pro_price = soup.select('.price')\n",
+    "pro_price[0].text.replace('\\n','').strip().replace('원','')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pro_price_list = []\n",
+    "for price in pro_price:\n",
+    "    pro_price_list.append(price.text.replace('\\n','').strip().replace('원',''))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['69,000', '27,900']"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pro_price_list[10].split('                ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_musinsa = pd.DataFrame(data={'브랜드':pro_brnad_list,'제품명':pro_title_list})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
